--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,4 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSS} %-5p [%c] - %m%n
 
-log4j.rootLogger=DEBUG, stdout
-
-# log4j.logger.org.springframework=INFO
-# log4j.logger.org.hibernate=INFO
+log4j.rootLogger=INFO, stdout
