--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,7 @@ git:
   depth: 3
 
 before_install:
-  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('rootroot') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
-  - sudo service mysql restart
-  - mysql -u root -p rootroot -e "use mysql;source database/ddl_dml.sql;"
+  - mysql -u travis < database/ddl_dml.sql
 
 script:
   - mvn clean verify
