--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -3,5 +3,5 @@
 
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url             = jdbc:mysql://localhost:3306/crud?zeroDateTimeBehavior=convertToNull
-jdbc.username        = root
-jdbc.password        = rootroot
+jdbc.username        = travis
+jdbc.password        =
