--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,15 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>person-sample-webapp Maven Webapp</name>
+    <name>Person Sample Webapp</name>
     <url>https://github.com/cesardl/person-sample-webapp</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <spring.version>3.2.8.RELEASE</spring.version>
         <hibernate.version>3.3.2.GA</hibernate.version>
