--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,6 +15,8 @@ sonar.java.source=1.8
 sonar.sources=src/main/
 sonar.java.binaries=target/
 
+sonar.junit.reportPaths=target/surefire-reports/
+
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
