--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
+dist: trusty
 language: java
-sudo: false
 install: true
 
 addons:
@@ -8,8 +8,7 @@ addons:
 
   sonarcloud:
     organization: "cesardl-github" # the key of the org you chose at step #3
-    token:
-      secure: $SONAR_TOKEN # encrypted value of your token
+    token: $SONAR_TOKEN # encrypted value of your token
 
 jdk:
   - oraclejdk8
