--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-jdbc.driverClassName = com.mysql.jdbc.Driver
+jdbc.driverClassName = com.mysql.cj.jdbc.Driver
 jdbc.url             = jdbc:mysql://localhost:3306/crud?zeroDateTimeBehavior=convertToNull
 jdbc.username        = travis
 jdbc.password        =
