Upgrading to Java 21

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=org.sanmarcux.samples.mysql.person
 
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Person Sample Webapp
-sonar.projectVersion=1.0.0
+sonar.projectVersion=1.0.0-SNAPSHOT
 
 sonar.links.homepage=https://github.com/cesardl/person-sample-webapp
 sonar.links.ci=https://travis-ci.org/cesardl/person-sample-webapp
@@ -11,7 +11,7 @@ sonar.links.issue=https://github.com/cesardl/person-sample-webapp/issues
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
-sonar.java.source=1.8
+sonar.java.source=21
 sonar.sources=src/main/
 sonar.java.binaries=target/
 
